In KNB theme: Offset the anchor links by the height of the fixed header so that all the content is visible.

--- a/metacatui/src/main/webapp/js/themes/knb/css/metacatui.css
+++ b/metacatui/src/main/webapp/js/themes/knb/css/metacatui.css
@@ -91,6 +91,12 @@ Bold 700 Italic
       color: #115E95; /*blue from the earthtones pallette */
     }
     
+    a.anchor{	/* Offsets the anchor links by the same height as the fixed header */
+    	position:relative;
+    	top: -95px;
+    	display: block;
+    }
+    
     div.row-fluid > a[name] {
       margin: 35px auto auto auto;
     }
